2008-08-25  Bradley M. Kuhn  <bkuhn@ebb.org>

	* pokernetwork/pokerpackets.py (PacketPokerSetLocale): Created new
	packet type.

	* tests/test-pokerservice.py.in: Added test to see if locale tests
	can complete.
	(PokerServiceTestCase.test00_4_badLocaleObject): Wrote test.

2008-08-25  Loic Dachary <loic@dachary.org>

 	* Release 1.7.0

	* pokernetwork/pokersite.py, tests/test-pokersite.py.in: last
	  modification date is better stored as an int
	* conf/poker.server.xml.in, pokernetwork/pokersite.py,
	  tests/test-pokersite.py.in: Expire session cookies stored in
	  memcache after /server/@cookie_timeout seconds. In theory
	  memcache should be able to provide a way to purge entries older
	  than N seconds because it keeps the last modification date. But
	  there is no API to use this information.
	* ChangeLog: *** empty log message ***

2008-08-24  Bradley M. Kuhn  <bkuhn@ebb.org>

	* debian/control.hardy (Build-Depends): Added language-pack-fr,
	which pokernetwork/test-pokerservice.py.in now depends.

	* debian/control.edgy (Build-Depends): Added language-pack-fr,
	which pokernetwork/test-pokerservice.py.in now depends.

	* debian/control.feisty (Build-Depends): Added language-pack-fr,
	which pokernetwork/test-pokerservice.py.in now depends.

	* debian/control.dapper (Build-Depends): Added language-pack-fr,
	which pokernetwork/test-pokerservice.py.in now depends.

	* debian/control.gutsy (Build-Depends): Added language-pack-fr,
	which pokernetwork/test-pokerservice.py.in now depends.

	* tests/test-pokerservice.py.in
	(PokerServiceTestCase.configValues): Added check for locales
	configuration.

	* pokernetwork/pokerservice.py
	(PokerService._lookupTranslationFunc): Wrote method.
	(PokerService.startService): Added needed calls to
	_lookupTranslationFunc.

	* tests/test-pokertable.py.in (MockService.loadHand): Added remove
	list to get rid of exampleHand packets that some tests do not want.
	(PokerTableTestCase.test31_kickPlayerForMissingTooManyBlinds):